First pass at cleanup. Reworked network builders to have some helper functions to make simple use cases cleaner Reworked entire networking package for code style and api exposure Used records and other new language features to cleanup some Removed LoginWrapper, instead HandshakeHandler can revive the channel name for C->S packets and dispatch them properly Worked on packet format documentation Fixed some oversights that caused packets to have weird formats {Menu packet sent data length twice for example}